Renamed to NewDoc, fixed style issue, checked in partialsfor example.

--- a/layouts/doc/list.html
+++ b/layouts/doc/list.html
@@ -2,9 +2,9 @@
 <div id="main-con" class="container">
     <div class="row">
         <div id="left-nav-con" class="col-md-3">
-            {{ partial "tutorials/side-menu.html" . }}
+            {{ partial "doc/side-menu.html" . }}
         </div>
-        <div id="documentation-content" class="col-md-9">
+        <div id="doc-content" class="col-md-9">
             {{ if eq .File.Path "index.md" }}
             <a class="pull-right" target="_blank" href="{{ .Site.Params.githubBaseUrl }}/_{{ .File.Path }}"><i class="icon icon-github"></i> Edit on GitHub</a>
             {{ else }}
