--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -811,7 +811,7 @@ html#home-html {
 }
 
 // Documentation
-#nats-documentation-detail-page, #nats-tutorial-detail-page {
+#nats-documentation-detail-page, #nats-docs-detail-page {
   #main-con {
     //background: url(/img/about-neuron-docs.png) right top no-repeat;
     padding-top: 20px;
