Initial doc page with copied content for non-api stuff. Connection example page, and placeholders for others.

--- a/layouts/doc/single.html
+++ b/layouts/doc/single.html
@@ -12,9 +12,9 @@
       {{ end }}
 
       <h1>{{ .Title }}</h1>
+      <article>
       {{ .Content }}
-
-
+      </article>
     </div>
   </div>
 </div>
