--- a/layouts/partials/doc/connect_default.html
+++ b/layouts/partials/doc/connect_default.html
@@ -3,13 +3,13 @@
 <ul class="nav nav-tabs">
   	
 		
-		<li class="active">
+		<li class="active api-lang" data-language="go">
 			<a data-toggle="tab" href="#connect_default-go">Go</a>
 	  	</li>
 		
 	
 		
-		<li>
+		<li class="api-lang" data-language="java">
 		  <a data-toggle="tab" href="#connect_default-java">Java</a>
 		</li>
 		
