--- a/layouts/partials/doc/reconnect_event.html
+++ b/layouts/partials/doc/reconnect_event.html
@@ -3,7 +3,7 @@
 <ul class="nav nav-tabs">
   	
 		
-		<li class="active">
+		<li class="active api-lang" data-language="java">
 			<a data-toggle="tab" href="#reconnect_event-java">Java</a>
 	  	</li>
 		
