--- a/src/less/util/icons.less
+++ b/src/less/util/icons.less
@@ -1,53 +1,71 @@
 @font-face {
-    font-family: 'nats';
-    src:  url('/fonts/nats.eot?zf0rz4');
-    src:  url('/fonts/nats.eot?zf0rz4#iefix') format('embedded-opentype'),
-    url('/fonts/nats.ttf?zf0rz4') format('truetype'),
-    url('/fonts/nats.woff?zf0rz4') format('woff'),
-    url('/fonts/nats.svg?zf0rz4#nats') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'nats';
+  src:  url('/fonts/nats.eot?11te58');
+  src:  url('/fonts/nats.eot?11te58#iefix') format('embedded-opentype'),
+    url('/fonts/nats.ttf?11te58') format('truetype'),
+    url('/fonts/nats.woff?11te58') format('woff'),
+    url('/fonts/nats.svg?11te58#nats') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 [class^="icon-"], [class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'nats' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'nats' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-copy:before {
+  content: "\e907";
+}
+.icon-duplicate:before {
+  content: "\e907";
+}
+.icon-files:before {
+  content: "\e907";
+}
+.icon-pages:before {
+  content: "\e907";
+}
+.icon-papers:before {
+  content: "\e907";
+}
+.icon-documents:before {
+  content: "\e907";
+}
 .icon-reddit:before {
-    content: "\e906";
+  content: "\e906";
 }
 .icon-brand:before {
-    content: "\e906";
+  content: "\e906";
 }
 .icon-social:before {
-    content: "\e906";
+  content: "\e906";
 }
 .icon-backward2:before {
-    content: "\e902";
+  content: "\e902";
 }
 .icon-forward3:before {
-    content: "\e903";
+  content: "\e903";
 }
 .icon-twitter:before {
-    content: "\e904";
+  content: "\e904";
 }
 .icon-github:before {
-    content: "\e901";
+  content: "\e901";
 }
 .icon-google-plus:before {
-    content: "\e905";
+  content: "\e905";
 }
 .icon-slack:before {
-    content: "\e900";
+  content: "\e900";
 }
