updated icon names

--- a/layouts/partials/doc/connect_multiple.html
+++ b/layouts/partials/doc/connect_multiple.html
@@ -18,7 +18,7 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="connect_multiple-go"><a class="pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-multiple/main.go#L11-25"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="glyphicon glyphicon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">servers := []string{&#34;nats://localhost:1222&#34;,
+		<pre class="tab-pane fade in active" id="connect_multiple-go"><a class="pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-multiple/main.go#L11-25"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">servers := []string{&#34;nats://localhost:1222&#34;,
 	&#34;nats://localhost:1223&#34;,
 	&#34;nats://localhost:1224&#34;,
 }
@@ -35,7 +35,7 @@ defer nc.Close()
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_multiple-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ConnectToMultipleServers.java#L11-22"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="glyphicon glyphicon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Options options = new Options.Builder().
+		<pre class="tab-pane fade" id="connect_multiple-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ConnectToMultipleServers.java#L11-22"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Options options = new Options.Builder().
                             server(&#34;nats://localhost:1222&#34;).
                             server(&#34;nats://localhost:1223&#34;).
                             server(&#34;nats://localhost:1224&#34;).
