--- a/layouts/partials/doc/connect_options.html
+++ b/layouts/partials/doc/connect_options.html
@@ -18,7 +18,7 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="connect_options-go"><a class="pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-options/main.go#L11-24"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="glyphicon glyphicon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">opts := nats.Options{
+		<pre class="tab-pane fade in active" id="connect_options-go"><a class="pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-options/main.go#L11-24"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">opts := nats.Options{
 	Timeout: 10 * time.Second,
 }
 
@@ -34,7 +34,7 @@ defer nc.Close()
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_options-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ConnectWithOptions.java#L13-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="glyphicon glyphicon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Options options = new Options.Builder().
+		<pre class="tab-pane fade" id="connect_options-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ConnectWithOptions.java#L13-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Options options = new Options.Builder().
                             server(&#34;nats://demo.nats.io:4222&#34;).
                             connectionTimeout(Duration.ofSeconds(10)). // Set timeout
                             build();
