--- a/layouts/partials/doc/connect_url.html
+++ b/layouts/partials/doc/connect_url.html
@@ -18,7 +18,7 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="connect_url-go"><a class="pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-url/main.go#L10-19"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="glyphicon glyphicon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;)
+		<pre class="tab-pane fade in active" id="connect_url-go"><a class="pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-url/main.go#L10-19"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">nc, err := nats.Connect(&#34;nats://demo.nats.io:4222&#34;)
 if err != nil {
 	log.Fatal(err)
 }
@@ -30,7 +30,7 @@ defer nc.Close()
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_url-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ConnectToServerURL.java#L10-16"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="glyphicon glyphicon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Connection nc = Nats.connect(&#34;nats://demo.nats.io:4222&#34;);
+		<pre class="tab-pane fade" id="connect_url-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ConnectToServerURL.java#L10-16"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Connection nc = Nats.connect(&#34;nats://demo.nats.io:4222&#34;);
 
 // Do something with the connection
 
