--- a/layouts/partials/doc/reconnect_10s.html
+++ b/layouts/partials/doc/reconnect_10s.html
@@ -12,7 +12,7 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="reconnect_10s-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ReconnectTenSeconds.java#L13-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="glyphicon glyphicon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Options options = new Options.Builder().
+		<pre class="tab-pane fade in active" id="reconnect_10s-java"><a class="pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/ReconnectTenSeconds.java#L13-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">Options options = new Options.Builder().
                             server(&#34;nats://demo.nats.io:4222&#34;).
                             reconnectWait(Duration.ofSeconds(10)).  // Set Reconnect Wait
                             build();
