fixed toolbar icon spacing fixed tooltip location

--- a/layouts/partials/doc/connect_default.html
+++ b/layouts/partials/doc/connect_default.html
@@ -16,9 +16,7 @@
 	
 </ul>
 <div class="tab-content">
-	
-		
-		<pre class="tab-pane fade in active" id="connect_default-go"><a class="pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-default/main.go#L10-19"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">nc, err := nats.Connect(nats.DefaultURL)
+<pre class="tab-pane fade in active" id="connect_default-go"><a target="_blank" class="toolbar-icons pull-right" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/connect-default/main.go#L10-19"><i class="icon icon-github js-tooltip toolbar-icons" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">nc, err := nats.Connect(nats.DefaultURL)
 if err != nil {
 	log.Fatal(err)
 }
