removed text decoration from links in a toolbar-icon

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -226,6 +226,10 @@ h6 {
   padding-left: 5px;
 }
 
+a.toolbar-icons {
+  text-decoration: none;
+}
+
 // Labels
 .label {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
