Moved diagrams in concepts to graphviz. Added connection options writeup, with Java examples. Added graphviz support in js

--- a/layouts/partials/js.html
+++ b/layouts/partials/js.html
@@ -1,5 +1,25 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
+<!-- Viz Support -->
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/viz.js/1.7.1/viz.js"> </script>
+<script type="text/javascript">
+function parseVizSections(){
+    var vizPrefix = "language-viz-";
+    Array.prototype.forEach.call(document.querySelectorAll("[class^=" + vizPrefix + "]"), function(x){
+        var engine;
+        x.getAttribute("class").split(" ").forEach(function(cls){
+            if (cls.startsWith(vizPrefix)) {
+                engine = cls.substr(vizPrefix.length);
+            }
+        });
+        var image = new DOMParser().parseFromString(Viz(x.innerText, {format:"svg", engine:engine}), "image/svg+xml");
+        x.parentNode.insertBefore(image.documentElement, x);
+        x.style.display = 'none';
+        x.parentNode.style.backgroundColor = "white";
+        x.parentNode.style.border=0;
+    });
+};
+</script>
 <script>
     function copyToClipboard(text, el) {
         var copyTest = document.queryCommandSupported('copy');
@@ -55,13 +75,14 @@
                 $('.nav-tabs .api-lang[data-language='+curLang+'] a').trigger('click');
             }
         }
+
+        parseVizSections();
     });
 
     $('#priv').on('click', function(e) {
         openPrivacy();
     });
 </script>
-
 
 <script src="/js/index.js"></script>
 <!-- Github Buttons -->
