--- a/layouts/partials/doc/connect_multiple.html
+++ b/layouts/partials/doc/connect_multiple.html
@@ -14,6 +14,12 @@
 		</li>
 		
 	
+		
+		<li class="api-lang" data-language="ts">
+		  <a data-toggle="tab" href="#connect_multiple-ts">TypeScript</a>
+		</li>
+		
+	
 </ul>
 <div class="tab-content">
 	
@@ -45,6 +51,20 @@ Connection nc = Nats.connect(options);
 // Do something with the connection
 
 nc.close();
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connect_multiple-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/connect_multiple_servers.ts#L6-17"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
+try {
+    let nc = await connect({servers: [&#34;nats://demo.nats.io:4222&#34;, &#34;nats://localhost:4222&#34;]});
+    // Do something with the connection
+    console.log(&#39;connected&#39;);
+    nc.close();
+} catch(ex) {
+    console.log(&#39;connection failed&#39;, ex);
+    return;
+}
 </code></pre>
 		
 	
